--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-cors-headers==4.3.0
 django-environ==0.11.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+drf-yasg==1.21.7
 Pillow==10.0.1
 psycopg2-binary==2.9.9
 PyJWT==2.8.0
