sqllite3 swiched to

--- a/myenv/pyvenv.cfg
+++ b/myenv/pyvenv.cfg
@@ -1,5 +1,5 @@
-home = /usr/bin
+home = C:\Users\localuser_nopass\AppData\Local\Programs\Python\Python311
 include-system-site-packages = false
-version = 3.11.4
-executable = /usr/bin/python3.11
-command = /usr/bin/python -m venv /home/orenvady/Repos/python/INAI_library/myenv
+version = 3.11.5
+executable = C:\Users\localuser_nopass\AppData\Local\Programs\Python\Python311\python.exe
+command = C:\Users\localuser_nopass\AppData\Local\Programs\Python\Python311\python.exe -m venv C:\Users\localuser_nopass\PycharmProjects\INAI_library\myenv
